--- a/devshub_project/users/templates/components/user_table.html
+++ b/devshub_project/users/templates/components/user_table.html
@@ -4,24 +4,26 @@
 
   <!-- User avatar -->
   <td class="text-left py-2 px-4">
-    {% if user.avatar %}
-      {% thumbnail user.avatar "80x80" crop="center" as avatar %}
-      <div class="relative max-w-20 w-full aspect-square rounded-full overflow-hidden shadow-md shadow-gray-400">
-        <a href="{{ user.get_absolute_url }}">
+    <div class="relative max-w-20 w-full aspect-square rounded-full overflow-hidden shadow-md shadow-gray-400">
+      <a href="{{ user.get_absolute_url }}">
+        {% if user.avatar %}
+          {% thumbnail user.avatar "80x80" crop="center" as avatar %}
           <img
             src="{{ avatar.url }}"
             alt="Аватар {{ user.username }}"
             class="absolute inset-0 w-full h-full object-cover object-center rounded-full duration-500 transition-transform hover:scale-110">
-        </a>
-      </div>
-    {% else %}
-      <span>Без аватарки</span>
-    {% endif %}
+        {% else %}
+          <svg viewBox="0 0 24 24" class="absolute inset-0 w-full h-full p-4 text-gray-400" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20 21C20 19.6044 20 18.9067 19.8278 18.3389C19.44 17.0605 18.4395 16.06 17.1611 15.6722C16.5933 15.5 15.8956 15.5 14.5 15.5H9.5C8.10444 15.5 7.40665 15.5 6.83886 15.6722C5.56045 16.06 4.56004 17.0605 4.17224 18.3389C4 18.9067 4 19.6044 4 21M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        {% endif %}
+      </a>
+    </div>
   </td>
 
   <!-- Username -->
   <td class="text-center py-2 px-4">
-    <a href="{{ project.get_absolute_url }}" class="hover:text-blue-600 active:text-blue-600 transition-colors">
+    <a href="{{ user.get_absolute_url }}" class="hover:text-blue-600 active:text-blue-600 transition-colors">
       {{ user.username|truncatechars:30 }}
     </a>
   </td>
