--- a/devshub_project/users/templates/users/user_detail.html
+++ b/devshub_project/users/templates/users/user_detail.html
@@ -20,12 +20,25 @@
         </div>
 
         <!-- Profile avatar -->
-        {% if user.avatar %}
-          {% thumbnail user.avatar "240x240" crop="center" as avatar %}
-          <div class="relative max-w-60 w-full mx-auto aspect-square rounded-full overflow-hidden shadow-md shadow-gray-400">
-            <img src="{{ avatar.url }}" alt="Аватар {{ user.username }}" class="absolute inset-0 w-full h-full object-cover object-center rounded-full" loading="lazy">
-          </div>
-        {% endif %}
+        <div class="relative max-w-60 w-full mx-auto aspect-square rounded-full overflow-hidden shadow-md shadow-gray-400">
+
+          <a href="{{ user.get_absolute_url }}">
+            {% if user.avatar %}
+              <!-- User avatar -->
+              {% thumbnail user.avatar "240x240" crop="center" as avatar %}
+              <img
+                src="{{ avatar.url }}"
+                alt="Аватар {{ user.username }}"
+                class="absolute inset-0 w-full h-full object-cover object-center rounded-full duration-500 transition-transform hover:scale-110">
+            {% else %}
+              <!-- User avatar placeholder -->
+              <svg viewBox="0 0 24 24" class="absolute inset-0 w-full h-full p-4 text-gray-400" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20 21C20 19.6044 20 18.9067 19.8278 18.3389C19.44 17.0605 18.4395 16.06 17.1611 15.6722C16.5933 15.5 15.8956 15.5 14.5 15.5H9.5C8.10444 15.5 7.40665 15.5 6.83886 15.6722C5.56045 16.06 4.56004 17.0605 4.17224 18.3389C4 18.9067 4 19.6044 4 21M16.5 7.5C16.5 9.98528 14.4853 12 12 12C9.51472 12 7.5 9.98528 7.5 7.5C7.5 5.01472 9.51472 3 12 3C14.4853 3 16.5 5.01472 16.5 7.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            {% endif %}
+          </a>
+
+        </div>
 
         <!-- User links -->
         <div>
